[gd_scene load_steps=3 format=3 uid="uid://bk8crod3sifth"]

[ext_resource type="Script" path="res://scenes/items/base_item.gd" id="1_u5oel"]
[ext_resource type="FontFile" uid="uid://cd2uvmainbr1d" path="res://assets/gui/fonts/blazma-regular.otf" id="2_nd4oh"]

[node name="base_item" type="Area3D"]
script = ExtResource("1_u5oel")

[node name="shape" type="CollisionShape3D" parent="."]

[node name="mesh" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="label_show" type="Area3D" parent="."]

[node name="shape" type="CollisionShape3D" parent="label_show"]

[node name="label" type="Label3D" parent="label_show"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.25, 0)
billboard = 1
double_sided = false
no_depth_test = true
fixed_size = true
texture_filter = 5
render_priority = 5
text = "test"
font = ExtResource("2_nd4oh")
outline_size = 0
uppercase = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="label_show" to="." method="_on_label_area_entered"]
[connection signal="body_exited" from="label_show" to="." method="_on_label_area_exited"]
